# Sparrow

./: .git-commit-template  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md  modules_configs.cmake  version.cmake
3rdAdapter/: CMakeLists.txt  LibgoAdapter.cpp  LibgoAdapter.h  SprLog.cpp  SprLog.h  SqliteAdapter.cpp  SqliteAdapter.h
Adapter/: CMakeLists.txt  LibgoAdapter.cpp  LibgoAdapter.h  SprLog.cpp  SprLog.h
Components/: CMakeLists.txt
Components/Basics/: CMakeLists.txt
Components/Basics/BindHubSrv/: BindCommon.h  BindingHub.cpp  CMakeLists.txt
Components/Basics/BinderManagerSrv/: BinderManager.cpp  BinderManager.h  CMakeLists.txt  main_binder.cpp
Components/Basics/DebugSrv/: CMakeLists.txt  DebugModule.cpp  DebugModule.h  DebugModuleHub.cpp  DebugModuleHub.h  RemoteShell.cpp  RemoteShell.h  main_debug.cpp
Components/Basics/LogManagerSrv/: CMakeLists.txt  LogManager.cpp  LogManager.h  main_log.cpp
Components/Basics/MediatorSrv/: CMakeLists.txt  SprMediator.bak.cpp  SprMediator.bak.h  SprMediator.cpp  SprMediator.h  SprMediatorHub.cpp  SprMediatorHub.h  main_mediator.cpp  main_proxy.cpp
Components/Basics/PowerManagerSrv/: CMakeLists.txt  PowerManager.cpp  PowerManager.h  PowerManagerHub.cpp  PowerManagerHub.h  PowerMnagerHub.h  main_power.cpp
Components/Basics/PropertiesSrv/: CMakeLists.txt  PropertyManager.cpp  PropertyManager.h  PropertyManagerHub.cpp  PropertyManagerHub.h  main_properties.cpp
Components/Basics/ServiceManagerSrv/: CMakeLists.txt  ServiceManager.cpp  ServiceManager.h  main_service.cpp
Components/Basics/SparrowSrv/: CMakeLists.txt  PluginManager.cpp  PluginManager.h  SprDirWatch.cpp  SprDirWatch.h  SprSystem.cpp  SprSystem.h  SprSystemTimer.cpp  SprSystemTimer.h  SprTimer.cpp  SprTimer.h  SprTimerManager.cpp  SprTimerManager.h  main_sparrow.cpp
Components/Basics/TimeManager/: NtpClient.cpp  NtpClient.h  TimeManager.cpp  TimeManager.h
Components/BindHubSrv/: BindCommon.h  BindingHub.cpp  BindingHub.h  CMakeLists.txt  main_bind.cpp
Components/BinderSrv/: BinderCommon.h  BinderManager.cpp  BinderManager.h  CMakeLists.txt  Parcel.cpp  Parcel.h  main_binder.cpp
Components/Business/: CMakeLists.txt
Components/Business/OneNetMqtt/: CMakeLists.txt  MqttMsg.h  OneJson.h  OneNetCommon.h  OneNetDevice.cpp  OneNetDevice.h  OneNetDriver.cpp  OneNetDriver.h  OneNetHub.cpp  OneNetHub.h  OneNetManager.cpp  OneNetManager.h  main_onenet.cpp
Components/Debug/: SprLog.h
Components/Framework/: CMakeLists.txt
Components/Framework/PowerManagerSrv/: PowerManager.cpp  PowerManager.h  main_power.cpp
Components/Framework/PropertiesSrv/: PropertyManager.cpp
Components/Framework/ServiceManagerSrv/: main_service.cpp
Components/Framework/SparrowSrv/: main_sparrow.cpp
Components/LogManager/: LogManager.cpp  LogManager.h  main_log.cpp
Components/LogManagerSrv/: LogManager.cpp  LogManager.h  main_log.cpp
Components/MainSparrow/: main_sparrow.cpp
Components/MediatorSrv/: SprMediator.cpp  SprMediator.h  main_proxy.cpp
Components/PowerManagerSrv/: PowerManager.cpp  PowerManager.h  main_power.cpp
Components/PropertiesSrv/: PropertyManager.cpp  PropertyManager.h  main_properties.cpp
Components/PropertyService/: main_properties.cpp
Components/ProxyService/: SprMediator.cpp  SprMediator.h  main_proxy.cpp
Components/ServiceManager/: main_service.cpp
Components/ServiceManagerSrv/: ServiceManager.cpp  ServiceManager.h  main_service.cpp
Components/SparrowSrv/: main_sparrow.cpp
Components/TimerManagerSrv/: Timer.cpp  Timer.h  main_timer.cpp
Configures/: system.prop
Core/: CMakeLists.txt  CommonErrorCodes.h  CommonMacros.h  CommonTypeDefs.h  CoreTypeDefs.h  DefineMacro.h  SprBinderHub.cpp  SprBinderHub.h  SprCommonType.h  SprContext.cpp  SprContext.h  SprDebugNode.cpp  SprDebugNode.h  SprEpollSchedule.cpp  SprEpollSchedule.h  SprLog.cpp  SprLog.h  SprMediator.cpp  SprMediator.h  SprMediatorFactory.cpp  SprMediatorFactory.h  SprMediatorIpcProxy.cpp  SprMediatorIpcProxy.h  SprMediatorMQProxy.cpp  SprMediatorProxy.h  SprMsg.cpp  SprMsg.h  SprNewObserver.cpp  SprNewObserver.h  SprObserver.cpp  SprObserver.h  SprObserverWithMQueue.cpp  SprObserverWithMQueue.h  SprObserverWithSocket.cpp  SprObserverWithSocket.h  SprObserverWithTimerFd.cpp  SprObserverWithTimerFd.h  SprObserverWithTimerfd.cpp  SprSigId.cpp  SprSigId.h  (+11 more)
Core/EpollEventHandler/: EpollDefs.h  EpollEventHandler.cpp  EpollEventHandler.h  IEpollEvent.cpp  IEpollEvent.h  PSocket.cpp  PSocket.h
Debug/: CMakeLists.txt
Debug/InfraWatch/: CustomDebugWatch.cpp  CustomDebugWatch.h  InfraCommon.cpp  InfraCommon.h  MainMenu.cpp  MainMenu.h  ManagersWatch.cpp  ManagersWatch.h  MediatorWatch.cpp  MediatorWatch.h  OneNetWatch.cpp  OneNetWatch.h  PowerManagerWatch.cpp  PowerManagerWatch.h  TerminalUI.cpp  TerminalUI.h  main_watch.cpp
Debug/LogShow/: main_logshow.cpp
Debug/RShellX/: LoginManager.cpp  LoginManager.h  ShellEnv.cpp  ShellEnv.h  main_rshellx.cpp
Docs/: C++编程规范.md  Issue提交规范.md  Sparrow Q&A.md  TODO.md  注意事项.md  版本管理.md  疑难杂症.md  第三方依赖.md
Examples/: CMakeLists.txt  DebugBinder.cc  DebugLibgo.cc  DebugMsg.cc  DebugSprCore.cc  DebugTimer.cc  GetProperty.cc  Sample1.cc  SampleHttp.cc  SampleHttpBytes.cc  SampleHttpServer.cc  SampleMQueue.cc  SampleSqlite.cc  SampleTcpClient.cc  SampleTcpServer.cc  SetProperty.cc
ExternInterfaces/: CMakeLists.txt  Property.cpp  Property.h
NewCore/: CMakeLists.txt  CoreTypeDefs.h  SprSigId.h  (+19 more)
PrivateAPIs/: CMakeLists.txt  DebugInterface.cpp  DebugInterface.h  SprMediatorInterface.cpp  SprMediatorInterface.h
PrivateAPIs/Binder/: BindCommon.h  BindInterface.cpp  BindInterface.h  Binder.cpp  Binder.h  IBinder.cpp  IBinder.h
PublicAPIs/: CMakeLists.txt  OneNetInterface.cpp  OneNetInterface.h  PowerManagerInterface.cpp  PowerManagerInterface.h  Property.cpp  Property.h
UtilModules/EpollEventHandler/: CMakeLists.txt  EpollDefs.h  EpollEventHandler.cpp  EpollEventHandler.h  IEpollEvent.cpp  IEpollEvent.h  PFile.cpp  PFile.h  PMsgQueue.cpp  PMsgQueue.h  PPipe.cpp  PPipe.h  PSocket.cpp  PSocket.h  PTimer.cpp  PTimer.h
(+74 files in other folders)
